syntax = "proto3";

package grpc;

service ExampleService {

    rpc SayHello (HelloRequest) returns (HelloResponse);

    rpc RaiseError (RaiseErrorRequest) returns (RaiseErrorResponse);

}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
    string createdAt = 2;
}

message RaiseErrorRequest {}

message RaiseErrorResponse {}
